2008-10-13  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Makefile.am, music/FIBO.hh, FIBO.cc, clock.cc,
	music/configuration.hh, configuration.cc, music/connector.hh,
	connector.cc, music/event_router.hh, event_router.cc,
	music/port.hh, port.cc, music/runtime.hh, runtime.cc,
	music/setup.hh, setup.cc, synchronizer.cc: A first, cheating,
	approximation of the implementation of spike communication.  Will
	be followed by cleanups and real implementation.  The present
	implementation only allows two applications with an output and
	input port respectively.  The ports have a constant width given in
	ports.hh and the sender and receiver application must have equal
	number of MPI processes.

	* music/connectivity.hh, connectivity.cc: New files.

2008-10-10  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/index_map.hh (local_index::local_index,
	local_index::local_index): New constructor.

	* music-c.h, music-c.cc (MUSIC_event_input_port_map_global_index,
	MUSIC_event_input_port_map_local_index): Replacing
	MUSIC_event_input_port_map.

	* music/port.hh (event_input_port): Added facilities to support C
	interface.

	* music/port.hh, port.cc (event_input_port::map): Take
	event_handler_global_index and event_handler_local_index instead
	of event_handler in second argument.

	* music/event.hh (event_handler_global_index,
	event_handler_local_index): New classes which replace
	event_handler.

	* music/port.hh, port.cc (insert_event): Replaced old method with
	two new, one with a second argument local_index, and an overloaded
	version with global_index.

	* music/index_map.hh (global_index, local_index): New classes.

2008-10-09  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/event_data.hh, music/message_data.hh: Removed.

	* music/event.hh (event_handler::operator ()): Made virtual and
	corrected arguments to adhere to RFC.

	* port.cc (event_output_port::insert_event): Send spikes to event
	router.

	* Makefile.am (libmusic_la_SOURCES): Added event_router.cc,